--- a/roadmap/proposalFMeinherz.tex
+++ b/roadmap/proposalFMeinherz.tex
@@ -107,7 +107,7 @@ For this project, two kinds of variables will be considered: On the one hand, va
 	- magnetometer x y z
 	- gyroscope x y z
 
-dashboard here:
+dashboard here:<
 http://octanis.org/constellation/
 
 
